--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,9 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        echo the images here are:
         docker images
-        docker run -it -p 3000:3000 my-image-name:$(date +%s)
+        echo if there is container display them here:
+        docker ps -a
+        echo docker logs available:
+        docker logs
